--- a/Valieva_project/AddEditPage.xaml
+++ b/Valieva_project/AddEditPage.xaml
@@ -5,10 +5,155 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Valieva_project"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="800"
       Title="AddEditPage">
 
     <Grid>
-        <TextBlock Text="Hello!" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"></TextBlock>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <!--<ColumnDefinition Width="*"></ColumnDefinition>-->
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.RowSpan="10">
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+            <TextBlock Text="Наименование" FontSize="15" Height="20" MinWidth="120" Width="auto" Margin="5"></TextBlock>
+            <TextBox Text="{Binding Title}" FontSize="15" Height="20" Width="400"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+            <TextBlock Text="Адрес" FontSize="15" Height="20" Width="auto" Margin="5"></TextBlock>
+            <TextBox Text="{Binding Address}" FontSize="15" Height="20" Width="500"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal">
+            <TextBlock Text="Директор" FontSize="15" Height="20"  Width="auto" Margin="5"></TextBlock>
+            <TextBox Text="{Binding DirectorName}" FontSize="15" Height="20" Width="400"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="7" Orientation="Vertical" Grid.RowSpan="4">
+            <TextBlock Text="Логотип" FontSize="15" Height="20" Width="auto" Margin="5"></TextBlock>
+            <Image Name="LogoImage" Stretch="UniformToFill" MinHeight="50" Height="80" Width="80"
+                   HorizontalAlignment="Center" Margin="5">
+                <Image.Source>
+                    <Binding Path="Logo" TargetNullValue="/ресурсы/picture.png" />
+                </Image.Source>
+            </Image>
+            <Button Content="Изменить" Name="ChangePictureBtn" Click="ChangePictureBtn_Click"></Button>
+        </StackPanel>
+        </StackPanel>
+<StackPanel Grid.Column="1" Grid.RowSpan="8" Orientation="Vertical">
+        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+            <TextBlock Text="Тип агента" FontSize="15" Height="20" Width="100" Margin="5"></TextBlock>
+            <ComboBox FontSize="15" Height="25" Width="100" Name="ComboType">
+                      <!--Text="{Binding AgentTypeID}"--> 
+                <TextBlock Text="МФО"/>
+                <TextBlock Text="ООО"/>
+                <TextBlock Text="ЗАО"/>
+                <TextBlock Text="МКК"/>
+                <TextBlock Text="ОАО"/>
+                <TextBlock Text="ПАО"/>
+            </ComboBox>
+        </StackPanel>
+        
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
+            <TextBlock Text="Приоритет" FontSize="15" Height="20" Width="100" Margin="5"></TextBlock>
+            <TextBox Text="{Binding Priority}" FontSize="15" Height="20" Width="100"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
+            <TextBlock Text="ИНН" FontSize="15" Height="20" Width="100" Margin="5"></TextBlock>
+            <TextBox Text="{Binding INN}" FontSize="15" Height="20" Width="100" Margin="5"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal">
+            <TextBlock Text="Телефон" FontSize="15" Height="20" Width="100" Margin="5"></TextBlock>
+            <TextBox Text="{Binding Phone}" FontSize="15" Height="20" Width="200"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
+            <TextBlock Text="КПП" FontSize="15" Height="20" Width="100" Margin="5"></TextBlock>
+            <TextBox Text="{Binding KPP}" FontSize="15" Height="20" Width="200"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="5" Orientation="Horizontal">
+            <TextBlock Text="e-mail" FontSize="15" Height="20" Width="200"></TextBlock>
+            <TextBox Text="{Binding Email}" FontSize="15" Height="20" Width="200"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="6" Orientation="Horizontal">
+            <Button Content="Сохранить" Name="SaveBtn" Click="SaveBtn_Click" Margin="5"></Button>
+            <Button Content="Удалить" Name="DeleteBtn" Click="DeleteBtn_Click" Margin="5"></Button>
+        </StackPanel>
+</StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="8" VerticalAlignment="Top">
+            <ListView Name="History" Width="350" HorizontalAlignment="Center" SelectionMode="Multiple">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Text="{Binding Product.Title}" Margin="5" FontSize="10" Grid.Column="0"></TextBlock>
+
+                            <TextBlock Text="{Binding ProductCount}" Margin="5" FontSize="10" Grid.Column="1"></TextBlock>
+
+                            <TextBlock Text="{Binding SaleDate}" Margin="5" FontSize="10" Grid.Column="2"></TextBlock>
+
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackPanel>
+
+        <StackPanel Grid.Column="0" Grid.Row="15"  Orientation="Horizontal" HorizontalAlignment ="Center">
+            <!--<TextBox x:Name="SearchBoxForComboBox" Height="20" Width="100" FontSize="15" 
+         TextChanged="SearchBoxForComboBox_TextChanged">
+            </TextBox>
+            <ComboBox SelectionChanged="ComboTitle_SelectionChanged" Height="20" Width="100" FontSize="15" Name="ComboTitle" HorizontalAlignment="Left" Margin="5">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{Binding Title}"></Label>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>-->
+<!--SelectionChanged="ComboProduct_SelectionChanged"-->
+            <ComboBox   IsEditable="True" Width="250" FontSize="15" Name="ComboProduct" Height="30" Margin="5" ItemsSource="{Binding Path=Product}" TextSearch.TextPath="Title" StaysOpenOnEdit="True">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Title}"></Label>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+
+            <TextBox Text=" " Name="CountProductTB" FontSize="15" Height="30" Width="40" Margin="5"></TextBox>
+            <DatePicker  Height="30" Width="80" FontSize="10" Name="StartDate" HorizontalAlignment="Left"></DatePicker>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" Grid.Row="16" Orientation="Horizontal">
+            <Button Content="Добавить " Name="AddHistory" Click="AddHistory_Click"></Button>
+            <Button Content="Удалить запись " Name="DelHistory" Click="DelHistory_Click"></Button>
+        </StackPanel>
+
     </Grid>
 </Page>
